# AI_KTV

./: .gitignore  CONTEXT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
3rd/AutoNcm2mp3-main/: AutoNcm2Mp3.spec  CHANGELOG.md  README.md  build.bat  requirements.txt  run.py
client/src/: MasterPage.tsx  SlavePage.tsx  device.ts  format.ts  lyrics.tsx  main.tsx  masterPlayback.ts  masterVocalInput.ts  roomSocket.ts  slaveVocalInput.ts  styles.css  ui.tsx  webrtcAudio.ts
docs/: user-todo.md
docs/adr/: 0001-single-server-with-master-and-slave-web-entries.md  0002-server-authoritative-room-state-over-websocket.md  0003-server-assigned-slave-slots.md  0004-server-restart-starts-new-ktv-room.md  0005-broadcast-complete-room-state-snapshots.md  0006-queued-song-ownership-belongs-to-paired-slave.md  0007-normalize-current-song-from-queue.md  0008-singing-mode-persists-across-songs.md  0009-mute-mv-audio-use-separate-song-audio.md  0010-line-timed-lyrics-with-progressive-highlight.md  0011-master-owns-playback-progress.md  0012-inline-timed-lyrics-in-song-library.md  0013-audio-source-switch-timeout.md  0014-direct-slave-vocal-input-to-master.md  0015-keep-vocal-input-link-warm-while-paired.md  0016-server-tracks-vocal-input-availability.md  0017-transient-webrtc-signalling-through-server.md  (+14 more)
scripts/: new-local-https-cert.ps1  open-master-kiosk.ps1  start-dev-client-https.mjs  start-dev-client-https.ps1  start-server-https.ps1
shared/: protocol.ts
tools/ncmdecode/: CMakeLists.txt
tools/ncmdecode/src/: main.cpp
(+24 files in other folders)
